deploy/gitops-repository/apps/cloudsentinel/base/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsentinel-web
  labels:
    app.kubernetes.io/component: web
spec:
  replicas: 2
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudsentinel
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudsentinel
        app.kubernetes.io/component: web
    spec:
      serviceAccountName: cloudsentinel
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 20
      imagePullSecrets:
        - name: cloudsentinel-registry
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cloudsentinel
              app.kubernetes.io/component: web
      containers:
        - name: web
          image: cloudsentinel-web
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests: {cpu: 20m, memory: 32Mi}
            limits: {cpu: 200m, memory: 96Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop: ["ALL"]
          startupProbe:
            httpGet: {path: /web-healthz, port: http}
            periodSeconds: 2
            failureThreshold: 20
          livenessProbe:
            httpGet: {path: /web-healthz, port: http}
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet: {path: /web-healthz, port: http}
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          volumeMounts:
            - {name: nginx-cache, mountPath: /var/cache/nginx}
            - {name: nginx-tmp, mountPath: /tmp}
      volumes:
        - name: nginx-cache
          emptyDir: {sizeLimit: 16Mi}
        - name: nginx-tmp
          emptyDir: {sizeLimit: 8Mi}
