deploy/gitops-repository/apps/cloudsentinel/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsentinel-api
  labels:
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudsentinel
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
