deploy/gitops-repository/apps/cloudsentinel/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsentinel-web
  labels:
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudsentinel
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
