deploy/gitops-repository/apps/cloudsentinel/base/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsentinel-worker
  labels:
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudsentinel
    app.kubernetes.io/component: worker
  ports:
    - name: metrics
      port: 9091
      targetPort: metrics
      protocol: TCP
